# CELN-Procesamiento_Imagenes

./: .gitignore  README.md
cuda/: CMakeLists.txt
cuda/source/: main.cu
mpi/: CMakeLists.txt
mpi/source/: MpiFunctions.cpp  main.cpp
openmp/: CMakeLists.txt
openmp/source/: main.cpp
openmp_collapse/: CMakeLists.txt
openmp_collapse/source/: main.cpp
seq/: CMakeLists.txt
seq/source/: main.cpp
